# KON414E

./: .gitignore  README.md
husky/husky_description/urdf/: husky.urdf.xacro  rtk_gps.urdf.xacro
husky/husky_gazebo/: CMakeLists.txt
husky/husky_gazebo/launch/: simulation.launch
husky/husky_mover/: CMakeLists.txt  package.xml
husky/husky_mover/src/: husky_mover.py
husky/husky_viz/rviz/: robot.rviz
husky_navigation/config/: costmap_common.yaml  costmap_exploration.yaml  costmap_global_laser.yaml  costmap_global_static.yaml  costmap_local.yaml  planner.yaml
husky_navigation/launch/: move_base.launch
husky_project_mapping/: CMakeLists.txt  install_dependencies.sh  package.xml
husky_project_mapping/config/: localization_global.yaml  mapping.rviz
husky_project_mapping/launch/: main.launch  nav_test.launch  view_map.launch
husky_project_mapping/launch/include/: localization.launch  mapping.launch  navigation.launch
husky_project_mapping/reports/: comparison_report.md
husky_project_mapping/scripts/: automated_test_monitor.py  save_maps.sh  send_goal.py  teleop_key.py
maps/: octomap_0_1.bt  octomap_0_2.bt  octomap_0_4.bt
